# tsunami

./: .gitignore  AUDIT.MD  CLAUDE.md  INSTANCE_PROMPTS.md  PLAN.md  README.md  ROADMAP.md  SCRATCHPAD.md  TSUNAMI_HARDENING_NOTES.md  config.docker.yaml  config.yaml  daily_report.py  docker-compose.yml  exec.Dockerfile  plan.md  pytest.ini  requirements-train.txt  requirements.txt  serve_diffusion.py  serve_transformers.py  setup.bat  setup.ps1  setup.sh  tsu  tsu.ps1  tsunami.iss  tsunami_cmd  tsunami_setup_hardened.sh
cli/: app.jsx  package-lock.json  package.json
desktop/: README.md  file_watcher.py  index.html  launcher.py  ws_bridge.py
docker/: Dockerfile  docker-entrypoint.sh
docs/: asset_pipeline.md  asset_state_graph_plan.md  bench_tools.md  daily_report.py  daily_report_2026-04-14.md  eval_2026-04-13_analysis.md  gamedev-quickstart.md  index.html  qwen_native_alignment.md  ship_gate_15_harness.md
engine/: package-lock.json  package.json  vitest.config.ts
installer/: tsunami.iss
intel/: webdev_init_project_README.md
scaffolds/: GAPS.md  apply_all_fixes.sh  chrome_extension_fix.sh  cli_readmes_test_section_fix.diff  common_deferred_banner.diff  config_generator_fix.diff  css_import_order_fix.diff  electron_app_fix.diff  engine_readme_correction.diff  engine_subsystem_table_fix.diff  engine_v2_scope_fix.diff  game_readme_create.diff  gamedev_action_adventure_fix.diff  inheriting_scaffolds_fix.sh  isoquadtree_cache_starter.ts  posecache_starter.ts  sdf_schema_extension.diff  small_drift_fix.diff
scaffolds/cli/config-generator/: README.md  pyproject.toml
scaffolds/cli/config-generator/data/: sample_params.yaml
scaffolds/cli/config-generator/src/config_generator/: __init__.py  cli.py  params.py  render.py
scaffolds/cli/config-generator/src/config_generator/templates/: app.yaml.j2  dotenv.env.j2
scaffolds/cli/data-processor/: README.md  pyproject.toml
scaffolds/cli/data-processor/data/: sample.jsonl  schema.json
scaffolds/cli/data-processor/src/data_processor/: __init__.py  cli.py  io.py  operators.py
scaffolds/cli/file-converter/: README.md  pyproject.toml
scaffolds/cli/file-converter/data/: sample.csv  sample.jsonl
scaffolds/cli/file-converter/src/file_converter/: __init__.py  cli.py  formats.py
scaffolds/training/finetune-recipe/: README.md  config.example.yaml  pyproject.toml
scaffolds/training/finetune-recipe/data/: sample.jsonl
scaffolds/training/finetune-recipe/src/finetune_recipe/: __init__.py  cli.py  config.py  recipe.py
(+4425 files in other folders)
